Starting to add MessagePack serialisation, updating namespace/project names

--- a/UDPMessaging.ISerializable/UDPMessaging.Serialization.ISerializable.csproj
+++ b/UDPMessaging.ISerializable/UDPMessaging.Serialization.ISerializable.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>UDPMessaging</RootNamespace>
-    <AssemblyName>UDPMessaging.ISerializable</AssemblyName>
+    <AssemblyName>UDPMessaging.Serialization.ISerializable</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
