--- a/UDPMessaging.Serialization.MessagePack.Tests/UDPMessaging.Serialization.MessagePack.Tests.csproj
+++ b/UDPMessaging.Serialization.MessagePack.Tests/UDPMessaging.Serialization.MessagePack.Tests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DEC19956-0310-41ED-91FA-10ABB71FD883}</ProjectGuid>
+    <ProjectGuid>{9AF49B0D-BFC4-4BC4-8BBF-C9D69DD29103}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>UDPMessagingTests</RootNamespace>
-    <AssemblyName>UDPMessagingTests</AssemblyName>
+    <RootNamespace>UDPMessaging.Serialization.MessagePack.Tests</RootNamespace>
+    <AssemblyName>UDPMessaging.Serialization.MessagePack.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -38,43 +38,21 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Bogus, Version=28.4.1.0, Culture=neutral, PublicKeyToken=fa1bb3f3f218129a, processorArchitecture=MSIL">
-      <HintPath>..\packages\Bogus.28.4.1\lib\net40\Bogus.dll</HintPath>
-    </Reference>
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\MSTest.TestFramework.1.2.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Exceptions\ReceiveFailureExceptionTests.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="IntergrationTest.cs" />
-    <Compile Include="Networking\UDPNetworkingTests.cs" />
-    <Compile Include="PeerManagerTests.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\UDPMessaging.ISerializable\UDPMessaging.Serialization.ISerializable.csproj">
-      <Project>{8943b9fc-3a5d-4fde-89fb-c8850791db24}</Project>
-      <Name>UDPMessaging.Serialization.ISerializable</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\UDPMessaging\UDPMessaging.csproj">
-      <Project>{b3dfbb7b-bc3c-4c38-9787-efca1d85d308}</Project>
-      <Name>UDPMessaging</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
